# micromatrix

./: .gitignore  LICENSE  README.md  example.py  example1.py  pyproject.toml
.github/workflows/: publish.yml
micromatrix/: __init__.py  main.py
